correct Donor Dropdown z-index issue

--- a/themes/donor-alliance/assets/main/css/structure.css
+++ b/themes/donor-alliance/assets/main/css/structure.css
@@ -17,9 +17,11 @@ body {
 	font-size: 50px;
 	margin-bottom: 25px;
 }
-
 #header .in {
+	background-color: #f00;
 	height: 70px;
+	position: relative;
+	z-index: 2;
 }
 #header .body {
 	position: relative;
